--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ header nav a:hover{
 main{
   width: 100%;
   height: 797px;
+  padding-top: 116px;
+  padding-left: 91px;
   background: rgb(38,70,83);
   background: radial-gradient(circle, rgba(38,70,83,1) 20%, rgba(3,4,94,1) 100%);
 }
@@ -51,20 +53,19 @@ main{
   width: 627px;
   height: 184px;
   box-shadow: 5px 5px 0 #000;
-  margin-left: 40px;
+  margin-left: 91px;
+  text-align: center;
   
 }
-h1{
+#main-container h1{
   font-size: 80px;
   color: #fff;
   text-shadow: 4px 4px 0 #000;
   font-family: 'Teko', sans-serif;
-  text-align: center;
   max-height: 40px;
 }
-h2{
+#main-container h2{
   font-size: 65px;
-  text-align: center;
   color: #ffb703;
   text-shadow: 4px 4px 0 #000;
   margin-top: 40px;
@@ -72,5 +73,11 @@ h2{
 
 }
 main .button{
-  margin-left: 30px;
+  margin-left: 112px;
+  margin-top: 38px;
+  cursor: pointer;
+}
+
+main .spc{
+  margin-left: 181px;
 }
