--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 header {
   background-color: #219ebc;
   border-bottom: 10px solid #023047 ;
@@ -39,13 +42,13 @@ header nav a:hover{
 .button:hover{
     transform: scale(1.1,1.1);
 }
-main{
-  width: 100%;
-  height: 797px;
+#info-container{
+  height:497px;
   padding-top: 116px;
   padding-left: 91px;
   background: rgb(38,70,83);
   background: radial-gradient(circle, rgba(38,70,83,1) 20%, rgba(3,4,94,1) 100%);
+  border-bottom: 10px solid #023047;
 }
 
 #main-container{
@@ -72,12 +75,51 @@ main{
   font-family: 'Teko', sans-serif;
 
 }
-main .button{
+#info-container .button{
   margin-left: 112px;
   margin-top: 38px;
   cursor: pointer;
 }
 
-main .spc{
+#info-container .spc{
   margin-left: 181px;
+}
+
+#skills-container{
+  background-color:#8ecae6 ;
+  border-bottom: solid 10px #219ebc;
+  height: 730px;
+  display: block;
+}
+
+#skills-title{
+  font-size: 60px;
+  padding-top: 50px;
+  color: #ffb703;
+  position: relative;
+  margin-bottom: 62px;
+  text-align: center;
+}
+.item{
+  display: flex;
+  padding-left: 400px;
+}
+.skill{
+  font-size: 25px;
+  text-align: left;
+}
+.skill-logo{
+  margin-right:32.33px ;
+  margin-bottom: 38px;
+  
+}
+.bar{
+  width: 240.877px;
+  height: 30px;
+  border: 5px solid #000 ;
+  display: flex;
+  background-color: #0466c8;
+}
+.info{
+ 
 }
